Fix: empty reference in docs

--- a/docs/features/models/few_shot_classification.ipynb
+++ b/docs/features/models/few_shot_classification.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Few-shot Text Classification"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -10,35 +19,27 @@
     "\n",
     "2. [Dataset](#2.-Datasets)\n",
     "    \n",
-    "    2.1 [Datasets format](#2.1-Datasets-format)\n",
+    "    2.1. [Datasets format](#2.1-Datasets-format)\n",
     "\n",
     "3. [Model architecture](#3.-Model-architecture)\n",
     "\n",
     "4. [Get started with the model](#4.-Get-started-with-the-model)\n",
     "    \n",
-    "    4.1 [Installation](#4.1-Installation)\n",
+    "    4.1. [Installation](#4.1-Installation)\n",
     "\n",
-    "    4.2 [Support dataset configuration](#4.2-Support-dataset-configuration)\n",
+    "    4.2. [Support dataset configuration](#4.2-Support-dataset-configuration)\n",
     "\n",
     "5. [Use the model for prediction](#5.-Use-the-model-for-prediction)\n",
     "\n",
-    "    5.1 [Predict using Python](#5.1-Predict-using-Python)\n",
+    "    5.1. [Predict using Python](#5.1-Predict-using-Python)\n",
     "    \n",
-    "    5.2 [Predict using CLI](#5.2-Predict-using-CLI)\n",
-    "     \n",
-    "6. [Train the model on your data](#6.-Train-the-model-on-your-data)\n",
+    "    5.2. [Predict using CLI](#5.2-Predict-using-CLI)\n",
+    "      \n",
+    "6. [Evaluate](#6.-Evaluate)\n",
     "    \n",
-    "    6.1 [Train your model from Python](#6.1-Train-your-model-from-Python)\n",
+    "    6.1. [Evaluate from Python](#6.1-Evaluate-from-Python)\n",
     "    \n",
-    "    6.2 [Train your model from CLI](#6.2-Train-your-model-from-CLI)\n",
-    "    \n",
-    "7. [Evaluate](#7.-Evaluate)\n",
-    "    \n",
-    "    7.1 [Evaluate from Python](#7.1-Evaluate-from-Python)\n",
-    "    \n",
-    "    7.2 [Evaluate from CLI](#7.2-Evaluate-from-CLI)\n",
-    "    \n",
-    "8. [Metrics](#8.-Metrics)"
+    "    6.2. [Evaluate from CLI](#6.2-Evaluate-from-CLI)"
    ]
   },
   {
@@ -63,12 +64,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "In our experiments we used the [CLINC150](https://paperswithcode.com/dataset/clinc150) dataset, which has 10 different domains with 15 intents each, 100 shots per intent class and 1000 OOS examples. It simulates a setting, where model has to handle many different services with wide variety of intents.\n",
     "\n",
-    "Specifically, we validate our model on CLINC150 from the original DNNC paper. We parsed it to match the format described [below](#21-dataset-format). The original dataset can be downloaded from the DNNC [github page](https://github.com/salesforce/DNNC-few-shot-intent)."
+    "Specifically, we validate our model on CLINC150 from the original DNNC paper. We parsed it to match the format described [below](#2.1-Datasets-format). The original dataset can be downloaded from the DNNC [github page](https://github.com/salesforce/DNNC-few-shot-intent)."
    ]
   },
   {
@@ -171,15 +173,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python -m deeppavlov install dnnc\n",
-    "!python -m deeppavlov download dnnc"
+    "!python -m deeppavlov install dnnc_infer\n",
+    "!python -m deeppavlov download dnnc_infer"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`dnnc` is the name of the model's *config_file*. [What is a Config File?](http://docs.deeppavlov.ai/en/master/intro/configuration.html) \n",
+    "`dnnc_infer` is the name of the model's *config_file*. [What is a Config File?](http://docs.deeppavlov.ai/en/master/intro/configuration.html) \n",
     "\n",
     "Configuration file defines the model and describes it's hyperparameters"
    ]
@@ -192,10 +195,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before making predictions or evaluation you need to set path to your support dataset. DNNC model compares input text to every example in support dataset to determine, which class the input example belongs to. By default, the model uses training set as support dataset. It is automatically saved by *dataset_iterator*  during the training step, but you can specify your own support dataset in the in `dnnc` config file. It has the same format as metioned [before]()"
+    "Before making predictions or evaluation you need to set path to your support dataset. DNNC model compares input text to every example in support dataset to determine, which class the input example belongs to. By default, the model uses training set as support dataset. It is automatically saved by *dataset_iterator*  during the training step, but you can specify your own support dataset in the in `dnnc_infer` config file. It has the same format as metioned [before](#2.1-Datasets-format)"
    ]
   },
   {
@@ -214,7 +218,7 @@
    "source": [
     "from deeppavlov.core.commands.utils import parse_config\n",
     "\n",
-    "model_config = parse_config('dnnc')\n",
+    "model_config = parse_config('dnnc_infer')\n",
     "\n",
     "#  dataset for predictions\n",
     "print(model_config['chainer']['pipe'][0]['support_dataset_path'])"
@@ -242,6 +246,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -264,7 +269,7 @@
    "source": [
     "from deeppavlov.core.commands.utils import parse_config\n",
     "\n",
-    "model_config = parse_config('dnnc')\n",
+    "model_config = parse_config('dnnc_infer')\n",
     "\n",
     "#  dataset for predictions\n",
     "print(model_config['chainer']['pipe'][-1]['confidence_threshold'])"
@@ -307,7 +312,7 @@
    "source": [
     "from deeppavlov import build_model, configs\n",
     "\n",
-    "model = build_model(\"dnnc\", install=True, download=True)\n",
+    "model = build_model(\"dnnc_infer\", install=True, download=True)\n",
     "\n",
     "model([\"can you find me a good reviewed hotel in japan\", \"if i get a visa can i travel to japan\"])"
    ]
@@ -332,7 +337,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python -m deeppavlov interact dnnc [-d] [-i]"
+    "!python -m deeppavlov interact dnnc_infer [-d] [-i]"
    ]
   },
   {
@@ -348,98 +353,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python -m deeppavlov predict dnnc [-d] [-i]"
+    "!python -m deeppavlov predict dnnc_infer [-d] [-i]"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 6. Train the model on your data"
+    "# 6. Evaluate"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have a separate `roberta_nli` config for training, which automatically transforms dataset into a pairwise format"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To train the model on your data, you need to change the path to the dataset in `roberta_nli` config"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "~/.deeppavlov/downloads/clinc150_no_oos\n"
-     ]
-    }
-   ],
-   "source": [
-    "from deeppavlov.core.commands.utils import parse_config\n",
-    "\n",
-    "model_config = parse_config('roberta_nli')\n",
-    "\n",
-    "#  dataset for training\n",
-    "print(model_config['dataset_reader']['data_path'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 6.1 Train your model from Python"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from deeppavlov import train_model\n",
-    "\n",
-    "model = train_model(\"roberta_nli\", install=True, download=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 6.2 Train your model from CLI"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!python -m deeppavlov train roberta_nli [-d] [-i]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 7. Evaluate"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To evaluate the model on your data, you need to change the path to the dataset in `dnnc` config"
+    "To evaluate the model on your data, you need to change the path to the dataset in `dnnc_infer` config"
    ]
   },
   {
@@ -458,17 +388,18 @@
    "source": [
     "from deeppavlov.core.commands.utils import parse_config\n",
     "\n",
-    "model_config = parse_config('dnnc')\n",
+    "model_config = parse_config('dnnc_infer')\n",
     "\n",
     "#  dataset for evaluation\n",
     "print(model_config['dataset_reader']['data_path'])"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 7.1 Evaluate from Python"
+    "## 6.1 Evaluate from Python"
    ]
   },
   {
@@ -479,14 +410,15 @@
    "source": [
     "from deeppavlov import evaluate_model\n",
     "\n",
-    "model = evaluate_model('dnnc', install=True, download=True)"
+    "model = evaluate_model('dnnc_infer', install=True, download=True)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 7.2 Evaluate from CLI"
+    "## 6.2 Evaluate from CLI"
    ]
   },
   {
@@ -495,34 +427,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python -m deeppavlov evaluate dnnc [-d] [-i]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 8. Metrics"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We follow the original DNNC paper approach and choose the best confidence_threshold on the dev set "
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "| Config name  | Dataset | Shot| Threshold |In-domain Accuracy | OOS Precision | OOS Recall | OOS F1 |\n",
-    "| :--- | --- | --- | --- | --- | --- | --- | ---: |\n",
-    "| dnnc | [CLINC150](https://paperswithcode.com/dataset/clinc150) | 5 | 0.6 | 88.8 | 71.0 | 86.2 | 77.8 |\n",
-    "| dnnc | [CLINC150](https://paperswithcode.com/dataset/clinc150) Banking Domain| 5 | 0.4 | 90.7 | 97.3 | 98.7 | 98.0 |\n",
-    "| dnnc | [CLINC150](https://paperswithcode.com/dataset/clinc150) Work Domain | 5 | 0.1 | 98.1 | 99.9 | 95.4 | 97.6 |"
+    "!python -m deeppavlov evaluate dnnc_infer [-d] [-i]"
    ]
   }
  ],
@@ -542,7 +447,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10 (default, Jun 22 2022, 20:18:18) \n[GCC 9.4.0]"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
