unify docs and convert rst to ipynb

--- a/docs/features/models/NER.ipynb
+++ b/docs/features/models/NER.ipynb
@@ -24,25 +24,25 @@
     "\n",
     "2. [Get started with the model](#2.-Get-started-with-the-model)\n",
     "\n",
-    "3. [Use the model for prediction](#3.-Use-the-model-for-prediction)\n",
+    "3. [Models list](#3.-Models-list)\n",
     "\n",
-    "    3.1. [Predict using Python](#3.1-Predict-using-Python)\n",
+    "4. [Use the model for prediction](#4.-Use-the-model-for-prediction)\n",
+    "\n",
+    "    4.1. [Predict using Python](#4.1-Predict-using-Python)\n",
     "    \n",
-    "    3.2. [Predict using CLI](#3.2-Predict-using-CLI)\n",
-    "     \n",
-    "4. [Train the model on your data](#4.-Train-the-model-on-your-data)\n",
+    "    4.2. [Predict using CLI](#4.2-Predict-using-CLI)\n",
     "    \n",
-    "    4.1. [Train your model from Python](#4.1-Train-your-model-from-Python)\n",
-    "    \n",
-    "    4.2. [Train your model from CLI](#4.2-Train-your-model-from-CLI)\n",
-    "    \n",
-    "5. [Evaluate](#5.-Evaluate)\n",
+    "5. [Evaluate](#6.-Evaluate)\n",
     "    \n",
     "    5.1. [Evaluate from Python](#5.1-Evaluate-from-Python)\n",
     "    \n",
     "    5.2. [Evaluate from CLI](#5.2-Evaluate-from-CLI)\n",
+    "\n",
+    "6. [Customize the model](#6.-Customize-the-model)\n",
     "    \n",
-    "6. [Models list](#7.-Models-list)\n",
+    "    6.1. [Train your model from Python](#6.1-Train-your-model-from-Python)\n",
+    "    \n",
+    "    6.2. [Train your model from CLI](#6.2-Train-your-model-from-CLI)\n",
     "\n",
     "7. [NER-tags list](#7.-NER-tags-list)\n"
    ]
@@ -129,16 +129,46 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "`ner_ontonotes_bert_torch` is the name of the model's *config_file*. [What is a Config File?](http://docs.deeppavlov.ai/en/master/intro/configuration.html) \n",
     "\n",
     "Configuration file defines the model and describes its hyperparameters. To use another model, change the name of the *config_file* here and further.\n",
-    "The full list of NER models with their config names can be found in the [table](#6.-Models-list).\n",
+    "The full list of NER models with their config names can be found in the [table](#3.-Models-list).\n",
     "\n",
-    "There are alternative ways to install the model's packages that do not require executing a separate command -- see the options in the next sections of this page.   "
+    "There are alternative ways to install the model's packages that do not require executing a separate command -- see the options in the next sections of this page."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. Models list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The table presents a list of all of the NER-models available in the DeepPavlov Library."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| Config name | Dataset | Language | Model Size | F1 score (ner_f1) | F1 score (ner_f1_token) |\n",
+    "| :--- | --- | --- | --- | --- | ---: |\n",
+    "| ner_case_agnostic_mdistilbert| [CoNLL-2003](https://paperswithcode.com/dataset/conll-2003)   | En | 1.6 GB | 89.9 | 91.6 |\n",
+    "| ner_conll2003_bert | [CoNLL-2003](https://paperswithcode.com/dataset/conll-2003) | En | 1.3 GB | **91.9** | **93.4** |\n",
+    "| ner_ontonotes_bert | [OntoNotes](https://paperswithcode.com/dataset/ontonotes-5-0) | En | 1.3 GB | 89.2 | 92.7 |\n",
+    "| ner_collection3_bert | [Collection3](https://www.researchgate.net/publication/313808701_Combining_Knowledge_and_CRF-Based_Approach_to_Named_Entity_Recognition_in_Russian) | Ru | 2.1 GB | **98.5** | **98.9** |\n",
+    "| ner_rus_bert | [Collection3](https://www.researchgate.net/publication/313808701_Combining_Knowledge_and_CRF-Based_Approach_to_Named_Entity_Recognition_in_Russian) | Ru | 2.1 GB | 97.6 | 98.5 |\n",
+    "| ner_rus_convers_distilrubert_2L | [Collection-rus](https://www.researchgate.net/publication/313808701_Combining_Knowledge_and_CRF-Based_Approach_to_Named_Entity_Recognition_in_Russian) | Ru | 1.3 GB | 92.9 | 96.6 |\n",
+    "| ner_rus_convers_distilrubert_6L | [Collection-rus](https://www.researchgate.net/publication/313808701_Combining_Knowledge_and_CRF-Based_Approach_to_Named_Entity_Recognition_in_Russian) | Ru | 1.6 GB | 96.7 | 98.5 |\n",
+    "| ner_rus_bert_probas | [Wiki-NER-rus](https://aclanthology.org/I17-1042/) | Ru | 2.1 GB | 72.6 | 79.5 |\n",
+    "| ner_ontonotes_bert_mult | [OntoNotes](https://paperswithcode.com/dataset/ontonotes-5-0) | Multi | 2.1 GB | 88.9 | 92.0 |\n"
    ]
   },
   {
@@ -146,14 +176,14 @@
    "metadata": {},
    "source": [
     "\n",
-    "# 3. Use the model for prediction"
+    "# 4. Use the model for prediction"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.1 Predict using Python"
+    "## 4.1 Predict using Python"
    ]
   },
   {
@@ -175,7 +205,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -220,7 +249,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.2 Predict using CLI"
+    "## 4.2 Predict using CLI"
    ]
   },
   {
@@ -243,7 +272,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`-d` is an optional download key (alternative to `download=True` in Python code). The key `-d` is used to download the pre-trained model along with embeddings and all other files needed to run the model. "
+    "`-d` is an optional download key (alternative to `download=True` in Python code). The key `-d` is used to download the pre-trained model along with embeddings and all other files needed to run the model."
    ]
   },
   {
@@ -266,7 +295,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4. Evaluate "
+    "# 5. Evaluate "
    ]
   },
   {
@@ -284,7 +313,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4.1 Evaluate from Python"
+    "## 5.1 Evaluate from Python"
    ]
   },
   {
@@ -302,7 +331,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4.1 Evaluate from CLI"
+    "## 5.2 Evaluate from CLI"
    ]
   },
   {
@@ -318,14 +347,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5. Train the model on your data"
+    "# 6. Customize the model"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5.1 Train your model from Python"
+    "## 6.1 Train your model from Python"
    ]
   },
   {
@@ -498,7 +527,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5.2 Train your model from CLI"
+    "## 6.2 Train your model from CLI"
    ]
   },
   {
@@ -508,37 +537,6 @@
    "outputs": [],
    "source": [
     "! python -m deeppavlov train ner_ontonotes_bert_torch"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 6. Models list"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The table presents a list of all of the NER-models available in the DeepPavlov Library."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "| Config name  | Dataset | Language | Model Size | F1 score (ner_f1) | F1 score (ner_f1_token)\n",
-    "| :--- | --- | --- | --- | --- | ---: |\n",
-    "| ner_case_agnostic_mdistilbert| [CoNLL-2003](https://paperswithcode.com/dataset/conll-2003)   | En | 1.6 GB | 89.9 | 91.6 |\n",
-    "| ner_conll2003_bert | [CoNLL-2003](https://paperswithcode.com/dataset/conll-2003) | En | 1.3 GB | **91.9** | **93.4** |\n",
-    "| ner_ontonotes_bert | [OntoNotes](https://paperswithcode.com/dataset/ontonotes-5-0) | En | 1.3 GB | 89.2 | 92.7 |\n",
-    "| ner_collection3_bert | [Collection3](https://www.researchgate.net/publication/313808701_Combining_Knowledge_and_CRF-Based_Approach_to_Named_Entity_Recognition_in_Russian) | Ru | 2.1 GB | **98.5** | **98.9** |\n",
-    "| ner_rus_bert | [Collection3](https://www.researchgate.net/publication/313808701_Combining_Knowledge_and_CRF-Based_Approach_to_Named_Entity_Recognition_in_Russian) | Ru | 2.1 GB | 97.6 | 98.5 |\n",
-    "| ner_rus_convers_distilrubert_2L | [Collection-rus](https://www.researchgate.net/publication/313808701_Combining_Knowledge_and_CRF-Based_Approach_to_Named_Entity_Recognition_in_Russian) | Ru | 1.3 GB | 92.9 | 96.6 |\n",
-    "| ner_rus_convers_distilrubert_6L | [Collection-rus](https://www.researchgate.net/publication/313808701_Combining_Knowledge_and_CRF-Based_Approach_to_Named_Entity_Recognition_in_Russian) | Ru | 1.6 GB | 96.7 | 98.5 |\n",
-    "| ner_rus_bert_probas | [Wiki-NER-rus](https://aclanthology.org/I17-1042/) | Ru | 2.1 GB | 72.6 | 79.5 |\n",
-    "| ner_ontonotes_bert_mult | [OntoNotes](https://paperswithcode.com/dataset/ontonotes-5-0) | Multi | 2.1 GB | 88.9 | 92.0 |\n"
    ]
   },
   {
@@ -581,10 +579,27 @@
     "| **CARDINAL**     | Numerals that do not fall under another type           |"
    ]
   }
-],
-"metadata": {
- "accelerator": "GPU"
-},
-"nbformat": 4,
-"nbformat_minor": 4
+ ],
+ "metadata": {
+  "accelerator": "GPU",
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
