--- a/docs/features/models/SQuAD.ipynb
+++ b/docs/features/models/SQuAD.ipynb
@@ -31,25 +31,25 @@
     "\n",
     "2. [Get started with the model](#2.-Get-started-with-the-model)\n",
     "\n",
-    "3. [Use the model for prediction](#3.-Use-the-model-for-prediction)\n",
+    "3. [Models list](#3.-Models-list)\n",
     "\n",
-    "    3.1. [Predict using Python](#3.1-Predict-using-Python)\n",
+    "4. [Use the model for prediction](#4.-Use-the-model-for-prediction)\n",
+    "\n",
+    "    4.1. [Predict using Python](#4.1-Predict-using-Python)\n",
     "    \n",
-    "    3.2. [Predict using CLI](#3.2-Predict-using-CLI)\n",
+    "    4.2. [Predict using CLI](#4.2-Predict-using-CLI)\n",
     "     \n",
-    "4. [Train the model on your data](#4.-Train-the-model-on-your-data)\n",
+    "5. [Train the model on your data](#5.-Train-the-model-on-your-data)\n",
     "    \n",
-    "    4.1. [from Python](#4.1-Train-your-model-from-Python)\n",
+    "    5.1. [from Python](#5.1-Train-your-model-from-Python)\n",
     "    \n",
-    "    4.2. [from CLI](#4.2-Train-your-model-from-CLI)\n",
+    "    5.2. [from CLI](#5.2-Train-your-model-from-CLI)\n",
     "    \n",
-    "5. [Evaluate](#5.-Evaluate)\n",
+    "6. [Evaluate](#6.-Evaluate)\n",
     "    \n",
-    "    5.1. [from Python](#5.1-Evaluate-from-Python)\n",
+    "    6.1. [from Python](#6.1-Evaluate-from-Python)\n",
     "    \n",
-    "    5.2. [from CLI](#5.2-Evaluate-from-CLI)\n",
-    "    \n",
-    "6. [Models list](#6.-Models-list)"
+    "    6.2. [from CLI](#6.2-Evaluate-from-CLI)"
    ]
   },
   {
@@ -172,15 +172,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "# 3. Use the model for prediction"
+    "# 3. Models list"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.1 Predict using Python"
+    "The table presents a list of all of the Context Question Answering models available in DeepPavlov Library."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| Config name  | Dataset | Language | Model Size | F1 score | EM  |\n",
+    "| :--- | --- | --- | --- | --- | ---: |\n",
+    "| squad_bert | SQuAD v1.1 | En | 1.3 GB | 88.86 | 81.49 |\n",
+    "| qa_squad2_bert | SQuAD v2.0 | En | 1.3 GB | 83.56 | 75.54 |\n",
+    "| qa_multisberquad_bert | MultiSQuAD | Multi | 2 GB | 80.76 | 63.81 |\n",
+    "| squad_ru_bert | SberQuAD | Ru | 2.0 GB | 84.71 | 66.21 |\n",
+    "| squad_ru_convers_distilrubert_2L | SberQuAD | Ru | 1.2 GB | 65.20 | 44.52 |\n",
+    "| squad_ru_convers_distilrubert_6L | SberQuAD | Ru | 1.6 GB | 80.57 | 61.54 |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# 4. Use the model for prediction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4.1 Predict using Python"
    ]
   },
   {
@@ -234,7 +262,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.2 Predict using CLI"
+    "## 4.2 Predict using CLI"
    ]
   },
   {
@@ -280,7 +308,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4. Train the model on your data"
+    "# 5. Train the model on your data"
    ]
   },
   {
@@ -288,7 +316,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "## 4.1 Train your model from Python"
+    "## 5.1 Train your model from Python"
    ]
   },
   {
@@ -435,7 +463,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4.2 Train your model from CLI"
+    "## 5.2 Train your model from CLI"
    ]
   },
   {
@@ -451,14 +479,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5. Evaluate "
+    "# 6. Evaluate "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5.1 Evaluate from Python"
+    "## 6.1 Evaluate from Python"
    ]
   },
   {
@@ -476,7 +504,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5.1 Evaluate from CLI"
+    "## 6.2 Evaluate from CLI"
    ]
   },
   {
@@ -487,38 +515,27 @@
    "source": [
     "! python -m deeppavlov evaluate squad_bert -d"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 6. Models list"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The table presents a list of all of the Context Question Answering models available in DeepPavlov Library."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "| Config name  | Dataset | Language | Model Size | F1 score | EM  |\n",
-    "| :--- | --- | --- | --- | --- | ---: |\n",
-    "| squad_bert | SQuAD v1.1 | En | 1.3 GB | 88.86 | 81.49 |\n",
-    "| qa_squad2_bert | SQuAD v2.0 | En | 1.3 GB | 83.56 | 75.54 |\n",
-    "| qa_multisberquad_bert | MultiSQuAD | Multi | 2 GB | 80.76 | 63.81 |\n",
-    "| squad_ru_bert | SberQuAD | Ru | 2.0 GB | 84.71 | 66.21 |\n",
-    "| squad_ru_convers_distilrubert_2L | SberQuAD | Ru | 1.2 GB | 65.20 | 44.52 |\n",
-    "| squad_ru_convers_distilrubert_6L | SberQuAD | Ru | 1.6 GB | 80.57 | 61.54 | \n"
-   ]
   }
  ],
  "metadata": {
-  "accelerator": "GPU"
+  "accelerator": "GPU",
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 4
