--- a/docs/features/models/classification.ipynb
+++ b/docs/features/models/classification.ipynb
@@ -28,23 +28,29 @@
     "# Table of contents\n",
     "\n",
     "1. [Introduction to the task](#1.-Introduction-to-the-task)\n",
+    "\n",
     "2. [Get started with the model](#2.-Get-started-with-the-model)\n",
-    "3. [Use the model for prediction](#3.-Use-the-model-for-prediction)\n",
     "\n",
-    "    3.1. [Predict using Python](#3.1-Predict-using-Python)\n",
+    "3. [Models list](#3.-Models-list)\n",
     "\n",
-    "    3.2. [Predict using CLI](#3.2-Predict-using-CLI)\n",
-    "4. [Evaluation](#4.-Evaluation)\n",
+    "4. [Use the model for prediction](#4.-Use-the-model-for-prediction)\n",
     "\n",
-    "    4.1. [from Python](#4.1-Evaluate-from-Python)\n",
+    "    4.1. [Predict using Python](#4.1-Predict-using-Python)\n",
     "\n",
-    "    4.2. [from CLI](#4.2-Evaluate-from-CLI)\n",
-    "5. [Train the model on your data](#5.-Train-the-model-on-your-data)\n",
+    "    4.2. [Predict using CLI](#4.2-Predict-using-CLI)\n",
     "\n",
-    "    5.1. [from Python](#5.1-Train-your-model-from-Python)\n",
+    "5. [Evaluation](#5.-Evaluation)\n",
     "\n",
-    "    5.2. [from CLI](#5.2-Train-your-model-from-CLI)\n",
-    "6. [Models list](#6.-Models-list)\n",
+    "    5.1. [from Python](#5.1-Evaluate-from-Python)\n",
+    "\n",
+    "    5.2. [from CLI](#5.2-Evaluate-from-CLI)\n",
+    "\n",
+    "6. [Train the model on your data](#6.-Train-the-model-on-your-data)\n",
+    "\n",
+    "    6.1. [from Python](#6.1-Train-your-model-from-Python)\n",
+    "\n",
+    "    6.2. [from CLI](#6.2-Train-your-model-from-CLI)\n",
+    "\n",
     "7. [Simple few-shot classifiers](#7.-Simple-few-shot-classifiers)\n",
     "\n",
     "    7.1. [Few-shot setting](#7.1-Few-shot-setting)\n",
@@ -107,19 +113,59 @@
     "`insults_kaggle_bert` is the name of the model's *config_file*. [What is a Config File?](http://docs.deeppavlov.ai/en/master/intro/configuration.html)\n",
     "\n",
     "Configuration file defines the model and describes its hyperparameters. To use another model, change the name of the *config_file* here and further.\n",
-    "The full list of NER models with their config names can be found in the [table](#6.-Models-list)."
+    "The full list of classification models with their config names can be found in the [table](#3.-Models-list)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "# 3. Use the model for prediction\n",
-    "\n",
-    "## 3.1 Predict using Python\n",
-    "\n",
-    "After [model installation](#2.-Get-started-with-the-model) build it from the config and use it for prediction."
+    "# 3. Models list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The table presents a list of all of the classification models available in DeepPavlov Library."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| Config name  | Language | Task | Dataset | Model Size | Metric | Score |\n",
+    "| :--- | --- | --- | --- | --- | --- | ---: |\n",
+    "| insults_kaggle_bert | En | Insults | [Insults](https://www.kaggle.com/c/detecting-insults-in-social-commentary) | 1.1 GB | ROC-AUC | 0.8770 |\n",
+    "| paraphraser_rubert | Ru | Paraphrase | [Paraphrase Corpus](http://paraphraser.ru/download/) | 2.0 GB | F1 | 0.8738 |\n",
+    "| paraphraser_convers_distilrubert_2L | Ru | Paraphrase | [Paraphrase Corpus](http://paraphraser.ru/download/) | 1.2 GB | F1 | 0.7396 |\n",
+    "| paraphraser_convers_distilrubert_6L | Ru | Paraphrase | [Paraphrase Corpus](http://paraphraser.ru/download/) | 1.6 GB | F1 | 0.8354 |\n",
+    "| sentiment_sst_conv_bert | En | Sentiment | [SST](https://paperswithcode.com/dataset/sst) | 1.1 GB | Accuracy | 0.6626 |\n",
+    "| sentiment_twitter | Ru | Sentiment | [Twitter Mokoron](http://study.mokoron.com/) | 6.2 GB | F1-macro | 0.9961 |\n",
+    "| rusentiment_bert | Ru | Sentiment | [RuSentiment](https://text-machine.cs.uml.edu/projects/rusentiment/) | 1.3 GB | F1-weighted | 0.7005 |\n",
+    "| rusentiment_convers_bert | Ru | Sentiment | [RuSentiment](https://text-machine.cs.uml.edu/projects/rusentiment/) | 1.5 GB | F1-weighted | 0.7724  |\n",
+    "| topics_distilbert_base_uncased | En | Topics | [DeepPavlov Topics](https://deeppavlov.ai/datasets/topics) | 6.2 GB | F1-macro | 0.9961 |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4. Use the model for prediction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4.1 Predict using Python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After [installing](#2.-Get-started-with-the-model) the model, build it from the config and predict."
    ]
   },
   {
@@ -130,7 +176,7 @@
    "source": [
     "from deeppavlov import build_model\n",
     "\n",
-    "model = build_model('insults_kaggle_bert', download=True)"
+    "model = build_model('insults_kaggle_bert', download=True, install=True)"
    ]
   },
   {
@@ -243,7 +289,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5. Train the model on your data\n",
+    "# 5. Customize the model\n",
     "\n",
     "## 5.1 Train your model from Python\n",
     "\n",
@@ -373,32 +419,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 6. Models list\n",
-    "\n",
-    "The table presents a list of all of the classification models available in DeepPavlov Library."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "| Config name  | Language | Task | Dataset | Model Size | Metric | Score |\n",
-    "| :--- | --- | --- | --- | --- | --- | ---: |\n",
-    "| insults_kaggle_bert | En | Insults | [Insults](https://www.kaggle.com/c/detecting-insults-in-social-commentary) | 1.1 GB | ROC-AUC | 0.8770 |\n",
-    "| paraphraser_rubert | Ru | Paraphrase | [Paraphrase Corpus](http://paraphraser.ru/download/) | 2.0 GB | F1 | 0.8738 |\n",
-    "| paraphraser_convers_distilrubert_2L | Ru | Paraphrase | [Paraphrase Corpus](http://paraphraser.ru/download/) | 1.2 GB | F1 | 0.7396 |\n",
-    "| paraphraser_convers_distilrubert_6L | Ru | Paraphrase | [Paraphrase Corpus](http://paraphraser.ru/download/) | 1.6 GB | F1 | 0.8354 |\n",
-    "| sentiment_sst_conv_bert | En | Sentiment | [SST](https://paperswithcode.com/dataset/sst) | 1.1 GB | Accuracy | 0.6626 |\n",
-    "| sentiment_twitter | Ru | Sentiment | [Twitter Mokoron](http://study.mokoron.com/) | 6.2 GB | F1-macro | 0.9961 |\n",
-    "| rusentiment_bert | Ru | Sentiment | [RuSentiment](https://text-machine.cs.uml.edu/projects/rusentiment/) | 1.3 GB | F1-weighted | 0.7005 |\n",
-    "| rusentiment_convers_bert | Ru | Sentiment | [RuSentiment](https://text-machine.cs.uml.edu/projects/rusentiment/) | 1.5 GB | F1-weighted | 0.7724  |\n",
-    "| topics_distilbert_base_uncased | En | Topics | [DeepPavlov Topics](https://deeppavlov.ai/datasets/topics) | 6.2 GB | F1-macro | 0.9961 |\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# 7. Simple few-shot classifiers\n",
     "\n",
     "Additionally, in the [faq](https://github.com/deeppavlov/DeepPavlov/tree/master/deeppavlov/configs/faq) section you can find a config for a fast and simple pre-BERT model, which consists of a fasttext vectorizer and a simple logistic regression classifier.\n",
@@ -451,7 +471,24 @@
   }
  ],
  "metadata": {
-  "accelerator": "GPU"
+  "accelerator": "GPU",
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 4
